[package]
name = "cumtd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
serde_json = "1.0.91"
serde = { version = "1.0.151", features = ["derive"] }
csv = "1.1.6"
time = { version = "0.3.17", features = ["parsing", "formatting"] }
thiserror = "1.0.38"